fix ansible lint

--- a/ansible/roles/tinyllama_deploy/templates/tinyllama-rayservice.yaml.j2
+++ b/ansible/roles/tinyllama_deploy/templates/tinyllama-rayservice.yaml.j2
@@ -61,7 +61,7 @@ spec:
       maxReplicas: 1
       groupName: gpu-worker-group
       rayStartParams:
-{% if resources.gpu_required %}
+{% if tinyllama_deploy_resources.gpu_required %}
         num-gpus: '1'
 {% else %}
         num-gpus: '0'
@@ -90,17 +90,17 @@ spec:
               limits:
                 cpu: 2
                 memory: 8Gi
-{% if resources.gpu_required %}
+{% if tinyllama_deploy_resources.gpu_required %}
                 nvidia.com/gpu: 1
 {% endif %}
               requests:
                 cpu: 1
                 memory: 4Gi
-{% if resources.gpu_required %}
+{% if tinyllama_deploy_resources.gpu_required %}
                 nvidia.com/gpu: 1
 {% endif %}
             env:
-{% if resources.gpu_required %}
+{% if tinyllama_deploy_resources.gpu_required %}
             - name: CUDA_VISIBLE_DEVICES
               value: "0"
 {% else %}
@@ -117,7 +117,7 @@ spec:
           - name: vllm-code
             configMap:
               name: vllm-app-code
-{% if resources.gpu_required %}
+{% if tinyllama_deploy_resources.gpu_required %}
           tolerations:
           - key: nvidia.com/gpu
             operator: Exists
