--- a/ansible/roles/tinyllama_deploy/templates/vllm_app.py.j2
+++ b/ansible/roles/tinyllama_deploy/templates/vllm_app.py.j2
@@ -3,7 +3,7 @@ from vllm import LLM, SamplingParams
 import os
 
 @serve.deployment(
-    ray_actor_options={"num_gpus": {{ 1 if resources.gpu_required else 0 }}},
+    ray_actor_options={"num_gpus": {{ 1 if tinyllama_deploy_resources.gpu_required else 0 }}},
     autoscaling_config={
         "min_replicas": 1,
         "max_replicas": 1,
@@ -16,7 +16,7 @@ class VLLMDeployment:
             max_model_len=1024,  # Reduced from 2048
             gpu_memory_utilization=0.80,  # Reduced from 0.85
             tensor_parallel_size=1,
-            dtype="{{ 'float16' if resources.gpu_required else 'float32' }}",
+            dtype="{{ 'float16' if tinyllama_deploy_resources.gpu_required else 'float32' }}",
             enforce_eager=True,  # Disable CUDA graphs to save memory
             max_num_seqs=4,  # Limit concurrent sequences
             max_num_batched_tokens=1024,  # Limit batch size
